<resources>
    <string name="app_name">RadioAva</string>
    <string name="home">Home</string>
    <string name="browse">Browser</string>
    <string name="artists">Artists</string>
    <string name="videos">Videos</string>
    <string name="my_music">My Music</string>
    <string name="welcome">Welcome To</string>
    <string name="hot">Hot</string>
    <string name="musics">Musics</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="albums">Albums</string>
    <string name="top">Top</string>
    <string name="more">More</string>
    <string name="must">Must</string>
    <string name="most">Most</string>
    <string name="viewed">Viewed</string>
    <string name="follow">Follow</string>
    <string name="watch">Watch</string>
    <string name="trending">Trending</string>
    <string name="_new">New</string>
    <string name="listen">Listen</string>
    <string name="see_more">See more</string>
    <string name="your_activities">Your Activities</string>
    <string name="your_downloads">Your Downloads</string>
    <string name="recently_played_musics">Recently Played Musics</string>
    <string name="recently_played_videos">Recently Played Videos</string>
    <string name="liked">Liked</string>
    <string name="followed_artist">Followed Artist</string>
    <string name="downloaded_musics">Downloaded Musics</string>
    <string name="downloaded_albums">Downloaded Albums</string>
    <string name="downloaded_videos">Downloaded Videos</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="not_played">Nothing has been played</string>
    <string name="not_found">Not Found</string>
    <string name="nothing_to_display">There is nothing to display</string>
    <string name="total_musics">Total Musics</string>
    <string name="followers">Followers</string>
    <string name="followed">Followed</string>
    <string name="plays">Plays</string>
    <string name="play">Play</string>
    <string name="download">Download</string>
    <string name="search">Search Music, Video, Artist</string>
    <string name="channel_name">Music PlayBack</string>
    <string name="channel_id">music_playback</string>
    <string name="lyric">Lyrics</string>
    <string name="something_went_wrong">Something went wrong. /n Check your network connection.</string>
</resources>